tests/NormalTests/paczka1/small_fuzzy/82318361.err
Error in line 3: bFV8rUzrEc A426 50,3
Error in line 12: KWC5gfzPwt S321 77,4
